--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">WeatherApp</string>
     <string name="title_activity_home">HomeActivity</string>
+
+    <string name="title_forecast">Forecast to Next 5 Days</string>
+    <string name="tab_text_1">List</string>
+    <string name="tab_text_2">Map</string>
+
+    <string name="error_connect_title">Request Error</string>
+    <string name="error_connect_text">There was an error when the app made a request. Please verify your internet connection and try again.</string>
 </resources>
