--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
 <resources>
     <string name="app_name">WeatherApp</string>
-    <string name="title_activity_home">HomeActivity</string>
 
     <string name="title_forecast">Forecast to Next 5 Days</string>
-    <string name="tab_text_1">List</string>
-    <string name="tab_text_2">Map</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_help">Help</string>
 
     <string name="hint_search_city">Search one city</string>
 
